fixed accordion jumpiness

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -11,15 +11,11 @@
   }
 }
 
-
 // workaround to improve accordion smootheness/choppiness
-.ui-accordion .ui-accordion-content{
-      box-sizing:content-box!important;
-      -moz-box-sizing:content-box!important;
-  //    overflow:auto!important;
-      overflow-x: hidden!important;
-      overflow-y: hidden!important;
+#accordion .ui-accordion-header {
+    margin:0 0 0px 0;
 }
+
 
 
 #accordion, #likedAccordion {
@@ -33,9 +29,9 @@
     font-size:1.8em;
     text-align: left;
     cursor: pointer;
-    margin-bottom:30px;
+//    margin-bottom:30px; // this doesn't do anything
     color:#f8f8f8;
-    padding:10px 20px;
+    padding:20px 20px;
   }
 
   h3:hover {
@@ -107,6 +103,7 @@
 .profile-wrapper {
      margin-bottom:700px; // workaround to improve accordion smootheness/choppiness
      @include mobile { margin-bottom:80px;}
+     padding-bottom:40px!important;
 
      .select { margin-top: 10px; display: block;}
 
